<resources>
    <string name="app_name">Foodiesta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hot_meals_for_a_good_day">Hot Meals for a Cold Day</string>
    <string name="food_name">Food name</string>
    <string name="category">Category</string>
    <string name="Country">Country</string>
    <string name="instructions">Instructions</string>
    <string name="search_here">Search For A Meal  ...</string>
    <string name="ingredient">Ingredient</string>
    <string name="get_food">Hungry? Let’s Fix That!🍔</string>
    <string name="user_name">Chef Name</string>
    <string name="chef_email">Chef Email</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="login_as_guest">Login As Guest</string>
    <string name="chef_name">Chef Name</string>
    <string name="meal_name">meal name</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="a_link_is_gonna_send_to_you_on_ur_email_to_reset_password">A link is gonna send to you on Ur Email</string>
    <string name="you_need_to_check_email_for_verfication_and_log_in">you need to check email for verfication and log in</string>
    <string name="ok">OK</string>
    <string name="backup_favorite_meals">BackUp Favorite Meals</string>
    <string name="backup_calender_meals">BackUp Calender Meals</string>
    <string name="logout">LogOut</string>
    <string name="download_favorite_meals">DownLoad Favorite Meals</string>
    <string name="download_calender_meals">DownLoad Calender Meals</string>
    <string name="guest">Guest</string>
</resources>