<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/purple"
    tools:context=".Welcome.WelcomeFragment">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="500dp"
    android:background="@drawable/profile_form_background"
    android:layout_gravity="bottom"
    >

    <Button
        android:id="@+id/welcome_btn_login"
        android:layout_width="300dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/login"
        android:layout_marginTop="200dp"
        />
    <Button
        android:id="@+id/welcome_btn_registration"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/welcome_btn_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:background="@drawable/welcome_registration_btn_shape"
        app:backgroundTint="@null"
        android:textColor="@color/purple"
        android:text="@string/registration"
        />
    <Button
        android:id="@+id/welcome_btn_guest"
        android:layout_width="300dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/welcome_btn_registration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/login_as_guest"
        android:layout_marginTop="16dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>