<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bottom_sheet_shape"
    tools:context=".Login.ForgetPasswordBottomSheet">

 <TextView
     android:id="@+id/forget_password_tv_reset"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/reset_password"
     android:textColor="@color/white"
     android:textSize="32sp"
     android:textStyle="bold"
     android:layout_margin="8dp"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     />
    <TextView
        android:id="@+id/forget_password_tv_instructuin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_link_is_gonna_send_to_you_on_ur_email_to_reset_password"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/forget_password_tv_reset"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />
    <EditText
        android:id="@+id/forget_password_et_email"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@drawable/welcome_registration_btn_shape"
        app:layout_constraintTop_toBottomOf="@id/forget_password_tv_instructuin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/forget_password_btn_reset"
        android:layout_marginTop="16dp"
        android:maxLines="1"
        android:hint="@string/enter_email_address"
        android:paddingStart="16dp"
        android:textColorHint="@color/purple"
        />
    <Button
        android:id="@+id/forget_password_btn_reset"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/forget_password_et_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="20dp"
        android:background="@drawable/welcome_registration_btn_shape"
        app:backgroundTint="@null"
        android:text="Reset Password"
        android:textColor="@color/purple"
        android:layout_marginBottom="12dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>