<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Presentation.Details.DetailsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/details_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp">

        <ImageView
            android:id="@+id/details_iv_meal_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:src="@drawable/food"
            />
    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/details_card_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/details_tv_meal_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="26sp"
                android:text="@string/food_name"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginBottom="8dp"
                />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/details_chips_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_gravity="center"
                android:elevation="12dp">

                <com.google.android.material.chip.Chip
                    android:id="@+id/details_chip_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:backgroundTint="@color/light_blue"
                    android:textColor="@color/white"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    />

                <com.google.android.material.chip.Chip
                    android:id="@+id/details_chip_counrty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Country"
                    android:backgroundTint="@color/light_blue"
                    android:textColor="@color/white"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    />
            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/details_tv_meal_instructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instructions"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="26sp"
                android:layout_marginBottom="8dp"
                />

            <TextView
                android:id="@+id/details_tv_meal_instructions_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginBottom="8dp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/details_rv_ingrediants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                tools:listitem="@layout/row_details_ingrediants"
                />

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/details_youtube_player_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
