<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Login.LoginFragment">

    <LinearLayout
        android:id="@+id/login_linear_layout"
        android:layout_width="300dp"
        android:layout_height="450dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/fools_gold_transparent"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_gravity="center"
            android:textSize="32sp"
            android:textColor="@color/white"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_text_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColorHint="@color/soft_gray"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            android:elevation="15dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_ti_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="ChefEmail"
                android:inputType="textEmailAddress"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_text_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColorHint="@color/soft_gray"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            android:elevation="8dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_ti_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/login_tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:layout_gravity="end"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="6dp"
            android:textColor="@color/white"
            />
        <Button
            android:id="@+id/login_btn_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/registration_btn_shape"
            android:layout_gravity="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/registration"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="4dp"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registration_btn_guest"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@drawable/guest_btn_shape"
            android:layout_gravity="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/guest"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            android:padding="8dp"
            android:drawableStart="@drawable/incognito"
            />
        <Button
            android:id="@+id/login_btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_margin="8dp"
            android:text="@string/login"
            android:backgroundTint="@color/fools_gold_transparent"
            app:backgroundTint="@null"
            android:textColor="@color/purple"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>