<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/black"

    tools:context=".Registration.RegistrationFragment">
<ImageView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:src="@drawable/registration_imag"
    android:scaleType="fitXY"
    />
    <LinearLayout
        android:id="@+id/registration_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp"
        android:layout_gravity="top"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Registration_text_layout_chef_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColorHint="@color/soft_gray"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            android:elevation="8dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registration_ti_chif_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="Chef Name"
                android:textColor="@color/white"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_text_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColorHint="@color/soft_gray"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            android:elevation="8dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registration_ti_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="ChefEmail"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_text_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColorHint="@color/soft_gray"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            android:elevation="8dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registration_ti_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="textPassword"
                android:textColor="@color/white"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_text_layout_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColorHint="@color/soft_gray"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            android:elevation="8dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registration_ti_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Confrim Password"
                android:inputType="textPassword"
                android:textColor="@color/white"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/registration_btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/registration_btn_shape"
            android:layout_gravity="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/login"
            android:layout_marginBottom="8dp"
            android:padding="8dp"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registration_btn_guest"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@drawable/guest_btn_shape"
            android:layout_gravity="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/guest"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            android:padding="8dp"
            android:drawableStart="@drawable/incognito"
            />
    <Button
        android:id="@+id/registration_btn_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:text="@string/registration"
        android:backgroundTint="@color/fools_gold_transparent"
        app:backgroundTint="@null"
        android:textColor="@color/purple"
        android:visibility="visible"
        android:textStyle="bold"
        />
    </LinearLayout>
</androidx.cardview.widget.CardView>